[tool.poetry]
name = "quipucordsctl"
version = "0.1.0"
description = "Utility for installing and managing a local quipucords server."
authors = ["Brad Smith <brasmith@redhat.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pytest = "^8.3.3"
coverage = "^7.6.7"
pytest-cov = "^6.0.0"
Faker = "^33.0.0"
setuptools = "^75.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "N",   # pep8-naming
]
lint.ignore = [
    "D107",
    "D203",
    "D403",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**test**" = [
    "PLC1901",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "S107",
    "S311",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"
