[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quipucordsctl = [
    "locale/**/*.mo",
    "templates/**/*.container",
    "templates/**/*.network",
    "templates/**/*.worker",
    "templates/**/*.env"
]

[project.scripts]
quipucordsctl = "quipucordsctl.__main__:main"

[project]
name = "quipucordsctl"
version = "0.1.0"
description = "Utility for installing and managing a local quipucords server."
requires-python = "<3.14,>=3.12"
authors = [
    {name = "Quipucords Dev Team", email = "quipucords@redhat.com"},
]
# license should preferably follow identifiers listed at the SPDX Open Source License Registry.
# https://spdx.org/licenses/
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
dependencies = [
    "podman>=4.9.0",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "coverage>=7.9.2",
    "faker>=37.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]

[tool.ruff]
lint.select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "N",   # pep8-naming
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
lint.ignore = [
    "D107",
    "D203",
    "D403",
]
extend-exclude = [
    # SystemdUnitParser is vendored. Ignore formatting and errors for now!
    "src/quipucordsctl/SystemdUnitParser/*"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**test**" = [
    "PLC1901",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "S107",
    "S311",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"
